--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@import url(http://weloveiconfonts.com/api/?family=typicons);
+
+/* typicons */
+[class*="typicons-"]:before {
+  font-family: 'Typicons', sans-serif;
+}
+
 body
 {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -342,110 +349,6 @@ padding: 6px 15px 2px;
 	height: 51em;
 }
 
-/**
-*** Media sizes
-***/
-
-@media screen and (min-width: 600px) and (max-width: 1400px) {
-	.card 
-	{
-		width: 100%;
-		height: 100%;
-	}
-	
-	.page
-	{
-		padding: 0px;
-		background-color: #fff;
-	}
-
-	.page ul
-	{
-		margin-left: 0px;
-	}
-	
-	.page li
-	{
-		float: left;
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		display:none;
-	}
-
-	#wrapper
-	{
-		padding-top: 20px;
-		padding-bottom: 20px;
-	}
-
-	#wrapper > div
-	{
-		height: auto;
-		width: auto;
-	}
-}
-
-@media screen and (max-width: 600px) {
-	#about,
-	#footer
-	{
-		display: none;
-	}
-
-	.title
-	{
-		display: inline;
-	}
-
-	.title-background
-	{
-		text-align: center;
-		padding-top: 15px;
-		padding-bottom: 10px;
-	}
-
-	.span3
-	{
-		margin-top: 0px;
-	}
-
-	li.divider
-	{
-		display: none;
-	}
-
-	#nav-list 
-	{
-		overflow-y: hidden;
-		margin-bottom: 15px;
-	}
-
-	#left-col
-	{
-		position: relative;
-		z-index: 100;
-	}
-}
-
-/**
-***  Bootstrap overwrite  
-***/
-
-.nav-list > .active > a, .nav-list > .active > a:hover
-{
-	background-color: #333;
-}
-
-a
-{
-	color: #333;
-}
-
-h3
-{
-	margin-bottom: 0px;
-}
 
 /**
 ***  Map
@@ -455,4 +358,41 @@ h3
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
+}
+
+.compass {
+	float: left;
+    font-size: 21px;
+}
+
+.compass-0 {
+	width: 34px;
+	transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+}
+
+.compass-45 {
+}
+
+.compass-90 {
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	-o-transform: rotate(-45deg);
+}
+
+/**
+*** Media sizes
+***/
+
+@media screen and (min-width: 600px) and (max-width: 1400px) {
+
+}
+
+@media screen and (max-width: 600px) {
+
 }
