--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ a:hover {
 .cards-expanded {
 	background: #fff;
 	border-radius: 2px;
-	box-shadow: 0 2px 6px rgba(0,0,0,0.3),0 -3px 8px rgba(0,0,0,0.2);
+	/*box-shadow: 0 2px 6px rgba(0,0,0,0.3),0 -3px 8px rgba(0,0,0,0.2);*/
 	display: inline-block;
 }
 
