--- a/css/style.css
+++ b/css/style.css
@@ -472,5 +472,7 @@ a:hover {
 	.cards-expanded {
 		border-radius: 0;
 		box-shadow: none;
+		border-bottom: 2px solid #e6e6e6;
+		border-right: 2px solid #e6e6e6;
 	}
 }
