--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://weloveiconfonts.com/api/?family=typicons);
+@import url(https://weloveiconfonts.com/api/?family=typicons);
 
 /* typicons */
 [class*="typicons-"]:before {
